--- a/RestaurantManagement/Views/Tables/Index.cshtml
+++ b/RestaurantManagement/Views/Tables/Index.cshtml
@@ -28,7 +28,7 @@
                         </td>
                         <td>
                             <a asp-controller="Tables"  asp-action="Edit" asp-route-Id="@table.Id" class="btn btn-warning btn-sm">تعديل</a>
-                            <a asp-action="Delete" asp-controller="Tables" class="btn btn-danger btn-sm">حذف</a>
+                            <a asp-controller="Tables" asp-action="Delete" asp-route-Id="@table.Id" class="btn btn-danger btn-sm">حذف</a>
                         </td>
                     </tr>
                 }
